@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,11 +13,11 @@ import org.junit.jupiter.api.Test;
 import seedu.address.logic.Messages;
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
-import seedu.address.model.person.JobContainsKeywordsPredicate;
+import seedu.address.model.person.NameOrJobContainsKeywordsPredicate;
 import seedu.address.model.person.Person;
 import seedu.address.testutil.PersonBuilder;
 
-public class FilterByJobCommandTest {
+public class FilterCommandTest {
 
     private Model model;
     private Model modelMultiple;
@@ -37,19 +38,19 @@ public class FilterByJobCommandTest {
 
     @Test
     public void equals() {
-        JobContainsKeywordsPredicate firstPredicate =
-                new JobContainsKeywordsPredicate(List.of("first"));
-        JobContainsKeywordsPredicate secondPredicate =
-                new JobContainsKeywordsPredicate(List.of("second"));
+        NameOrJobContainsKeywordsPredicate firstPredicate =
+                new NameOrJobContainsKeywordsPredicate(List.of("first"), List.of());
+        NameOrJobContainsKeywordsPredicate secondPredicate =
+                new NameOrJobContainsKeywordsPredicate(List.of("second"), List.of());
 
-        FilterByJobCommand filterFirstCommand = new FilterByJobCommand(firstPredicate);
-        FilterByJobCommand filterSecondCommand = new FilterByJobCommand(secondPredicate);
+        FilterCommand filterFirstCommand = new FilterCommand(firstPredicate);
+        FilterCommand filterSecondCommand = new FilterCommand(secondPredicate);
 
         // same object -> returns true
         assertEquals(filterFirstCommand, filterFirstCommand);
 
         // same values -> returns true
-        FilterByJobCommand filterFirstCommandCopy = new FilterByJobCommand(firstPredicate);
+        FilterCommand filterFirstCommandCopy = new FilterCommand(firstPredicate);
         assertEquals(filterFirstCommand, filterFirstCommandCopy);
 
         // different types -> returns false
@@ -65,8 +66,8 @@ public class FilterByJobCommandTest {
     @Test
     public void execute_zeroKeywords_noPersonFound() {
         String expectedMessage = String.format(Messages.MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
-        JobContainsKeywordsPredicate predicate = preparePredicate(" ");
-        FilterByJobCommand command = new FilterByJobCommand(predicate);
+        NameOrJobContainsKeywordsPredicate predicate = preparePredicate(" ");
+        FilterCommand command = new FilterCommand(predicate);
         model.updateFilteredPersonList(predicate);
         assertEquals(expectedMessage, command.execute(model).getFeedbackToUser());
         assertEquals(List.of(), model.getFilteredPersonList());
@@ -75,8 +76,8 @@ public class FilterByJobCommandTest {
     @Test
     public void execute_noMatchingKeywords_noPersonFound() {
         String expectedMessage = String.format(Messages.MESSAGE_PERSONS_LISTED_OVERVIEW, 0);
-        JobContainsKeywordsPredicate predicate = preparePredicate("NonExistentJob");
-        FilterByJobCommand command = new FilterByJobCommand(predicate);
+        NameOrJobContainsKeywordsPredicate predicate = preparePredicate("j/NonExistentJob");
+        FilterCommand command = new FilterCommand(predicate);
         model.updateFilteredPersonList(predicate);
         assertEquals(expectedMessage, command.execute(model).getFeedbackToUser());
         assertEquals(List.of(), model.getFilteredPersonList());
@@ -84,9 +85,14 @@ public class FilterByJobCommandTest {
 
     @Test
     public void execute_singleMatchingKeyword_onePersonFound() {
+        // Ensure the model is correctly set up with the expected persons
+        Person photographer = new PersonBuilder().withName("Alex").withJob("Photographer").build();
+        model = new ModelManager();
+        model.addPerson(photographer);
+
         String expectedMessage = String.format(Messages.MESSAGE_PERSONS_LISTED_OVERVIEW, 1);
-        JobContainsKeywordsPredicate predicate = preparePredicate("Photographer");
-        FilterByJobCommand command = new FilterByJobCommand(predicate);
+        NameOrJobContainsKeywordsPredicate predicate = preparePredicate("j/Photographer");
+        FilterCommand command = new FilterCommand(predicate);
         model.updateFilteredPersonList(predicate);
         assertEquals(expectedMessage, command.execute(model).getFeedbackToUser());
         assertEquals(1, model.getFilteredPersonList().size());
@@ -94,9 +100,16 @@ public class FilterByJobCommandTest {
 
     @Test
     public void execute_singleMatchingKeywords_multiplePersonsFound() {
+        // Ensure the model is correctly set up with the expected persons
+        Person photographer = new PersonBuilder().withName("Alex").withJob("Photographer").build();
+        Person photographer2 = new PersonBuilder().withName("Bob").withJob("Photographer").build();
+        modelMultiple = new ModelManager();
+        modelMultiple.addPerson(photographer);
+        modelMultiple.addPerson(photographer2);
+
         String expectedMessage = String.format(Messages.MESSAGE_PERSONS_LISTED_OVERVIEW, 2);
-        JobContainsKeywordsPredicate predicate = preparePredicate("Photographer");
-        FilterByJobCommand command = new FilterByJobCommand(predicate);
+        NameOrJobContainsKeywordsPredicate predicate = preparePredicate("j/Photographer");
+        FilterCommand command = new FilterCommand(predicate);
         modelMultiple.updateFilteredPersonList(predicate);
         assertEquals(expectedMessage, command.execute(modelMultiple).getFeedbackToUser());
         assertEquals(2, modelMultiple.getFilteredPersonList().size());
@@ -104,16 +117,27 @@ public class FilterByJobCommandTest {
 
     @Test
     public void toStringMethod() {
-        JobContainsKeywordsPredicate predicate = new JobContainsKeywordsPredicate(Arrays.asList("keyword"));
-        FilterByJobCommand filterByJobCommand = new FilterByJobCommand(predicate);
-        String expected = FilterByJobCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
-        assertEquals(expected, filterByJobCommand.toString());
+        NameOrJobContainsKeywordsPredicate predicate = new NameOrJobContainsKeywordsPredicate(List.of("keyword"),
+                List.of());
+        FilterCommand filterCommand = new FilterCommand(predicate);
+        String expected = FilterCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
+        assertEquals(expected, filterCommand.toString());
     }
 
     /**
-     * Parses {@code userInput} into a {@code JobContainsKeywordsPredicate}.
+     * Parses {@code userInput} into a {@code NameOrJobContainsKeywordsPredicate}.
      */
-    private JobContainsKeywordsPredicate preparePredicate(String userInput) {
-        return new JobContainsKeywordsPredicate(Arrays.asList(userInput.split("\\s+")));
+    private NameOrJobContainsKeywordsPredicate preparePredicate(String userInput) {
+        List<String> nameKeywords = Arrays.stream(userInput.split("\\s+"))
+                .filter(keyword -> keyword.startsWith("n/"))
+                .map(keyword -> keyword.substring(2))
+                .collect(Collectors.toList());
+
+        List<String> jobKeywords = Arrays.stream(userInput.split("\\s+"))
+                .filter(keyword -> keyword.startsWith("j/"))
+                .map(keyword -> keyword.substring(2))
+                .collect(Collectors.toList());
+
+        return new NameOrJobContainsKeywordsPredicate(nameKeywords, jobKeywords);
     }
 }
